# maSMP-metadata-extraction

./: .gitignore  .gitmodules  CITATION.cff  README.md  docker-compose.yml  hermes.toml
Backend/: README.md  main.py  (+1 more)
backend-migration/: .dockerignore  .gitignore  Dockerfile  README.md  README_PYPI.md  pyproject.toml  requirements.txt
backend-migration/app/: __init__.py  cli.py  main.py
backend-migration/app/adapters/: __init__.py  external_data_fetcher_adapter.py  extraction_metadata_collector.py  factory.py  file_parser_adapter.py  jsonld_builder.py
backend-migration/app/adapters/github/: __init__.py  github_client.py  github_extractor.py  github_file_fetcher.py
backend-migration/app/api/: __init__.py
backend-migration/app/application/: __init__.py
backend-migration/app/config/: __init__.py  settings.py
backend-migration/app/core/: __init__.py
backend-migration/app/domain/: __init__.py  extraction_sources.py  property_extraction_sources.py
backend-migration/comet_rs/: __init__.py
backend-migration/docs/: ADDING_NEW_PLATFORM.md  DEVELOPER_GUIDE.md
backend-migration/tests/: __init__.py  test_api_fairness_endpoint.py  test_citation_file_parser.py  test_external_data_fetcher_adapter.py  test_extract_metadata_usecase.py  test_extraction_metadata_collector.py  test_fairness_entities.py  test_fairness_evaluator.py  test_fairness_service.py  test_github_extractor.py  test_gitlab_extractor.py  test_jsonld_builder.py  test_openalex_client.py  test_property_extraction_sources.py  test_public_api_comet_rs.py  test_readme_parser.py  test_wayback_client.py
(+125 files in other folders)
